[gd_scene load_steps=63 format=3 uid="uid://cqjwklf07u834"]

[ext_resource type="Texture2D" uid="uid://2js2lq4nelr7" path="res://assets/Cute_Fantasy_Free/Enemies/Skeleton.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://cxthkf2754m4p" path="res://script/skeleton.gd" id="1_txkty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thsr5"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekh6n"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sbpf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kod"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lioqc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lg75"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsnsy"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_605iw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q4o"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tuss"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v6cf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vab5u"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiusc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie7m"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya47j"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyejq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0dkt"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdxul"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7lhw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gst0f"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4rh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lniq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w3jn"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwvf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pw1s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pbvs3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thsr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekh6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kod")
}],
"loop": true,
"name": &"swim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}],
"loop": true,
"name": &"take_damage_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3vcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaulx")
}],
"loop": true,
"name": &"take_damage_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f82d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lioqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lg75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsnsy")
}],
"loop": true,
"name": &"take_damage_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_605iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tuss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v6cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vab5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiusc")
}],
"loop": true,
"name": &"walking_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyejq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0dkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdxul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7lhw")
}],
"loop": true,
"name": &"walking_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gst0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lniq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w3jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pw1s")
}],
"loop": true,
"name": &"walking_side",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txkty"]
size = Vector2(1.6015282, 9.523022)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivqcw"]
size = Vector2(11, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_txkty"]
radius = 38.209946

[sub_resource type="Gradient" id="Gradient_txkty"]
interpolation_mode = 1
interpolation_color_space = 1

[sub_resource type="GradientTexture2D" id="GradientTexture2D_txkty"]
gradient = SubResource("Gradient_txkty")
width = 20
height = 2
use_hdr = true

[sub_resource type="Gradient" id="Gradient_ivqcw"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.2425, 0.97, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ivqcw"]
gradient = SubResource("Gradient_ivqcw")
width = 20
height = 2

[node name="skeleton" type="CharacterBody2D"]
script = ExtResource("1_txkty")

[node name="enemy_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pbvs3")
animation = &"walking_front"
autoplay = "idle_front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.19923592, -2.2384892)
shape = SubResource("RectangleShape2D_txkty")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_ivqcw")

[node name="Timer" type="Timer" parent="Area2D"]

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_txkty")

[node name="hp" type="TextureProgressBar" parent="."]
offset_left = -9.031586
offset_top = -15.736038
offset_right = 10.968414
offset_bottom = -12.736038
max_value = 6.0
rounded = true
texture_under = SubResource("GradientTexture2D_txkty")
texture_progress = SubResource("GradientTexture2D_ivqcw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
